--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@tensorflow/tfjs": "^3.3.0",
     "@tensorflow/tfjs-node": "^3.3.0",
+    "@tensorflow/tfjs-node-gpu": "^3.3.0",
     "@tensorflow/tfjs-vis": "^1.5.0",
     "axios": "^0.21.1",
     "moment": "^2.29.1",
