--- a/package.json
+++ b/package.json
@@ -20,10 +20,8 @@
   "dependencies": {
     "@tensorflow/tfjs": "^3.3.0",
     "axios": "^0.21.1",
+    "jest": "^26.6.3",
     "moment": "^2.29.1",
     "technicalindicators": "^3.1.0"
-  },
-  "devDependencies": {
-    "jest": "^26.6.3"
   }
 }
