--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jest": "^26.6.3",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
-    "technicalindicators": "^3.1.0"
+    "technicalindicators": "^3.1.0",
+    "twelvedata": "^2.0.0"
   }
 }
