--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "@tensorflow/tfjs": "^3.3.0",
     "axios": "^0.21.1",
     "jest": "^26.6.3",
+    "key-file-storage": "^2.2.9",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
-    "node-localstorage": "^2.1.6",
     "technicalindicators": "^3.1.0",
     "twelvedata": "^2.0.0"
   }
