--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "moment": "^2.29.1",
     "technicalindicators": "^3.1.0",
     "twelvedata": "^2.0.0"
+  },
+  "devDependencies": {
+    "canvas": "^2.7.0"
   }
 }
