--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "homepage": "https://github.com/loehx/trading-analysis#readme",
   "dependencies": {
-    "@tensorflow/tfjs": "^3.3.0",
+    "@tensorflow/tfjs-node": "^3.3.0",
     "axios": "^0.21.1",
     "jest": "^26.6.3",
     "key-file-storage": "^2.2.9",
