--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "key-file-storage": "^2.2.9",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
-    "technicalindicators": "^3.1.0",
-    "twelvedata": "^2.0.0"
+    "technicalindicators": "^3.1.0"
   },
   "devDependencies": {
     "canvas": "^2.7.0"
