--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@tensorflow/tfjs": "^3.3.0",
     "axios": "^0.21.1",
+    "commander": "^7.2.0",
     "jest": "^26.6.3",
     "key-file-storage": "^2.2.9",
     "lodash": "^4.17.21",
