--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "jest --watch",
-    "test": "jest --verbose"
+    "test": "jest --verbose",
+    "alex": "node ./test/trading/trader/Alex.manual.js --max-old-space-size=4096"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,7 @@
     "key-file-storage": "^2.2.9",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
+    "pretty-ms": "^7.0.1",
     "technicalindicators": "^3.1.0"
   }
 }
