--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "key-file-storage": "^2.2.9",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
+    "nodeplotlib": "^0.7.3",
     "pretty-ms": "^7.0.1",
     "technicalindicators": "^3.1.0"
   }
