--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jest": "^26.6.3",
     "key-file-storage": "^2.2.9",
     "lodash": "^4.17.21",
+    "lodash-transpose": "^0.2.1",
     "moment": "^2.29.1",
     "nodeplotlib": "^0.7.3",
     "pretty-ms": "^7.0.1",
