--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "jest --watch",
     "test": "jest --verbose",
-    "alex": "node ./test/trading/trader/Alex.manual.js --max-old-space-size=4096"
+    "clear": "node ./services/clearCache.js",
+    "alex": "node ./test/trading/trader/Alex.manual.js --max-old-space-size=4096",
+    "indicators": "node ./test/shared/indicators.manual.js"
   },
   "repository": {
     "type": "git",
@@ -19,7 +21,7 @@
   },
   "homepage": "https://github.com/loehx/trading-analysis#readme",
   "dependencies": {
-    "@tensorflow/tfjs": "^3.3.0",
+    "@tensorflow/tfjs": "^3.5.0",
     "axios": "^0.21.1",
     "commander": "^7.2.0",
     "jest": "^26.6.3",
@@ -27,6 +29,7 @@
     "lodash": "^4.17.21",
     "lodash-transpose": "^0.2.1",
     "moment": "^2.29.1",
+    "node-gyp": "8.0.0",
     "nodeplotlib": "^0.7.3",
     "pretty-ms": "^7.0.1",
     "technicalindicators": "^3.1.0"
