--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
   "homepage": "https://github.com/loehx/trading-analysis#readme",
   "dependencies": {
     "@tensorflow/tfjs": "^3.5.0",
+    "adm-zip": "^0.5.5",
     "axios": "^0.21.1",
     "commander": "^7.2.0",
+    "glob": "^7.1.6",
+    "glob-promise": "^4.1.0",
     "jest": "^26.6.3",
     "key-file-storage": "^2.2.9",
     "lodash": "^4.17.21",
